# Trigent

./: CLAUDE.md  README.md  config.toml.example  flake.nix  migrate_couchdb_to_qdrant.py  migrate_to_couchdb.py  pyproject.toml
rich_issue_mcp/: cli.py  database.py  enrich.py  mcp_server.py  pull.py  validate.py  visualize.py
rich_issue_mcp/views/: by_pulled_date.js  by_updatedAt.js  design_doc.json
tests/: conftest.py  populate_test_repo.py  test_mcp_server.py  test_pull.py  test_pull_qdrant.py  test_stats.py
tests/fixtures/: README.md
tests/fixtures/issues/: issue_1001.json  issue_1002.json  issue_1003.json  issue_1004.json  issue_1005.json  issue_1006.json  issue_1007.json  issue_1008.json  issue_1009.json  issue_1010.json
tests/fixtures/updated/: issue_1001.json  issue_1005.json  issue_1011.json
trigent/: __init__.py  __main__.py  clean.py  cli.py  config.py  database.py  enrich.py  mcp_server.py  metrics.py  pull.py  stats.py  tui.py  update.py  validate.py  visualize.py
trigent/browse/: __init__.py  command.py  tui.py
trigent/export/: __init__.py  board.py  command.py  csv.py
trigent/serve/: __init__.py  __main__.py  command.py  mcp_server.py
trigent/views/: by_engagements.js  by_number.js  by_recommendations.js
